# transporter_networks

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.yaml
transporter_networks/: ebm_condition_transporter.py  ebm_transporter.py  goal_conditioned_transporter.py  goal_transporter.py  og_transporter.py  transporter.py
transporter_networks/config/: og_transporter.yaml
transporter_networks/config/pick/: resnet_43.yaml
transporter_networks/config/place/: resnet_43.yaml
transporter_networks/model_components/: resnet.py
